TAG: littriageload-6-0-23-2
TAG: littriageload-6-0-23-1
DATE: 02/19/2024
STAFF: lec
fix line 762/exception/print

TAG: littriageload-6-0-22-15
DATE: 08/28/2023
STAFF: lec
wts2-1155/fl2-491/GOC:  littriageload/merge littriage_goa/littriage_noctua folders -> littriage_go
#       modified:   bin/littriageload.py
#       modified:   bin/updateRelevance.py

TAG: littriageload-6-0-22-14
DATE: 08/22/2023
STAFF: lec
wts2-1258/fl2-488/littriage/secondary triage/GXD
#       modified:   bin/secondary.py

TAG: littriageload-6-0-22-13
DATE: 06/14/2023
STAFF: lec
added prepareForTesting.sh

TAG: littriageload-6-0-22-12
DATE: 01/11/2023
STAFF: lec
wts2-1092/fl2-122/GXD secondary supplemental data tweak
littriageload.py

TAG: littriageload-6-0-22-11
DATE: 01/03/2023
STAFF: lec
wts2-848/fl2-56/new supplemental logic
wts2-1081/fl2-100/Set Reviews to Not Routed status for GXD
littriageload.py
secondary.py

TAG: littriageload-6-0-22-10
TAG: littriageload-6-0-22-9
TAG: littriageload-6-0-22-8
TAG: littriageload-6-0-22-7
TAG: littriageload-6-0-22-6
TAG: littriageload-6-0-22-5
DATE: 11/30/2022, 12/07/2022
STAFF: lec
fl2/gxd secondary triage
mgidbmigration/fl2-gxd
littriageload/bin/GXD2aryRouter.py
littriageload/bin/secondary.py
autolittriage/figureText.py
MLtextTools/utilsLib.py

TAG: littriageload-6-0-22-4
TAG: littriageload-6-0-22-3
TAG: littriageload-6-0-22-2
TAG: littriageload-6-0-22-1
DATE: 11/23/2022, 11/25/2022
STAFF: lec
wts2-550/TR13423 - ltlo: NLM-refresh not updating abstract

TAG: littriageload-6-0-20-3
DATE: 06/15/2022
STAFF: lec
wts2-867/some reports being overwritten in archive of secondary.PRO.log files

TAG: littriageload-6-0-20-2
DATE: 06/14/2022
STAFF: lec
wts2-891/Lit Triage Development articles marked as DB supplement not found

TAG: littriageload-6-0-20-1
DATE: 06/13/2022
STAFF: lec
wts2-895/J#s simultaneously have two supplemental statuses

TAG: littriageload-6-0-19-3
TAG: littriageload-6-0-19-2
TAG: littriageload-6-0-19-1
DATE: 06/08/2022
STAFF: lec